--- a/TestProject/Packages/manifest.json
+++ b/TestProject/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.0.0-exp.4",
     "com.unity.collab-proxy": "1.5.7",
     "com.unity.ext.nunit": "1.0.6",
     "com.unity.ide.rider": "2.0.7",
